<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    			android:layout_marginLeft="8dp"
			android:layout_marginBottom="8dp"
			android:layout_marginRight="8dp"
			android:layout_marginTop="8dp"
    tools:context=".MainActivity" >


        <TextView android:text="@string/reset_password"
			android:id="@+id/login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="3dp"
			android:layout_marginBottom="10dp"
			android:layout_marginRight="3dp"
			android:layout_marginTop="3dp"
			android:textSize="24sp"
			/>
        
       
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000011">            
        </View>
        
         <TextView android:text="@string/reset_password_guide"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="#555555"
			android:layout_marginLeft="3dp"
			android:layout_marginBottom="10dp"
			android:layout_marginRight="3dp"
			android:layout_marginTop="3dp"
			android:textSize="24sp"
			/>

        <EditText
            android:id="@+id/email"
            android:text="@string/email"
            android:textColor="#666666"
            android:background="#aaaaaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" >            
        </EditText>
 		 <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff">            
        </View>
       

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
        
        <TextView android:text=""
			android:id="@+id/reset_password_result"
			android:layout_width="wrap_content"
			android:layout_height="100dp"
			android:layout_marginLeft="3dp"
			android:layout_marginBottom="10dp"
			android:layout_marginRight="3dp"
			android:layout_marginTop="3dp"
			android:textSize="24sp"
			/>
        
        

</LinearLayout>